Label for 'pref' checkbox made visible (Issue #96).

--- a/resources/css/edit-form.less
+++ b/resources/css/edit-form.less
@@ -129,7 +129,8 @@ table {
   width: 10px;
 
   .xfLabel {
-    display: none !important;
+    font-size: 0.9em;
+    margin-bottom: 3px;
   }
 }
 
